--- a/client/index.html
+++ b/client/index.html
@@ -21,5 +21,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="src/index.tsx"></script>
+    <!-- <script type="module" src="./js/main.js"></script> -->
+
   </body>
 </html>
